Fix preventing page to shift after opening bootstrap modal

--- a/src/Dialog/Dialog.css
+++ b/src/Dialog/Dialog.css
@@ -13,3 +13,6 @@ svg.MuiSvgIcon-root.add-new-row {
     margin-left: 15px !important;
     margin-top: 10px !important;
 }
+h6{
+    color: white !important;
+}
